deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: app-tekton-spring-boot
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: app-tekton-spring-boot
    app.kubernetes.io/name: tekton-spring-boot
    app.kubernetes.io/part-of: tekton-spring-boot
    app.openshift.io/runtime: java
  name: tekton-commit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tekton-spring-boot
  template:
    metadata:
      labels:
        app: tekton-spring-boot
    spec:
      containers:
      - name: tekton-spring-boot
        imagePullPolicy: Always
        image: quay.io/sachinayyar/tekton-serverless:0a54002058cd22b7ab62f4efc63fa09b4235d161
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
