route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: tekton-spring-boot
  name: tekton-spring-boot
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: tekton-spring-boot
    weight: 100
